--- a/canvas.html
+++ b/canvas.html
@@ -1,22 +1,25 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
+  <style>
+    <!--canvas.solid{border-style: solid;}-->
+    #slate{
+    border: 2px solid black;
+    }
+  </style>
+  <head>
+    <title>
+      Canvas Testing
+    </title>
+  </head>
+  <body>
+    <canvas height="500" width="500" id="slate">
+    </canvas>
+    <button id="clear"> Clear! </button>
+    <button id="stop"> Stop! </button>
+    <button id="circle"> Circle! </button>
+    <button id="dvd"> DVD! </button>
 
-	<head>
-		<style>
-			#slate{
-				border: 2px solid powderblue;
-			}
-		</style>
-		<title>Canvas </title>
-	</head>
+    <script src="animate.js"></script>
+  </body>
 
-	<body>
-		<canvas height="500" width="500" id="slate">
-			stuff
-		</canvas>
-		<br>
-		<button id = "b1"> clear </button>
-		<button id = "b2"> stop </button>
-		<script src="draw.js"></script>
-	</body>
 </html>
